--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<div class="section-title text-center">
 									<section id="scrollstart"></section>
 
-									<button onclick="topFunction();" id="myBtn" title="Go to top">Top</button>
+									<button onclick="back2Top();" id="myBtn" title="Go to top">Top</button>
 
 								<h2>My Research Questions</h2>
 								<ul style="list-style-type:circle; text-align:left; color:black;">
