--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="zxx" class="no-js">
 <head>
+
+		<!-- <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button> -->
+
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Favicon-->
@@ -64,9 +67,7 @@
 					<div class="row justify-content-center">
 						<div class="col-lg-6">
 							<div class="section-title text-center">
-									<section id="scrollstart"></section>
-
-									<button onclick="topFunction();" id="myBtn" title="Go to top">Top</button>
+									<section id="scrollstart"></section> 
 
 								<h2>My Research Questions</h2>
 								<ul style="list-style-type:circle; text-align:left; color:black;">
