Added project description

--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
 						<div class="col-lg-6">
 							<div class="section-title text-center">
 								<h2 class="text-white">My Project</h2>
-								<p class="text-white">Insert project and research description here</p>
+								<p class="text-white">My project was on the benefits of volunteerism on people, communities, and 
+									ourselves.
+								</p>
 							</div>
 						</div>
 					</div>
