Added Content On Main And Sub Project Pages

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 								<div class="desc text-center mt-30">
 									<h4 class="text-white">Preliminary Research</h4>
 									<p class="text-white">Few would argue that, despite the advancements of feminism over the past three decades, women still face a double</p>
-									<a href="research.html" class="primary-btn"><span>Read More</span></a>
+									<a href="action.html" class="primary-btn"><span>Read More</span></a>
 								</div>
 							</div>
 						</div>
@@ -114,7 +114,7 @@
 								<div class="thumb" style="background: url(img/leo-logo.png);"></div>
 								<div class="desc text-center mt-30">
 									<h4 class="text-white">My Experience</h4>
-									<p class="text-white">There are advances being made in science and technology everyday, and a good example of this is the LCD monitor. LCD </p>
+									<p class="text-white">This section covers my personal volunteering history, as broken down in my research paper.</p>
 									<a href="experience.html" class="primary-btn"><span>Read More</span></a>
 								</div>
 							</div>
@@ -123,9 +123,9 @@
 							<div class="single-feature">
 								<div class="thumb" style="background: url(img/t3.jpg);"></div>
 								<div class="desc text-center mt-30">
-									<h4 class="text-white">My Contribution</h4>
-									<p class="text-white">Sony laptops are among the most well known laptops on today’s market. Sony is a name that over time has established itself</p>
-									<a href="action.html" class="primary-btn"><span>Read More</span></a>
+									<h4 class="text-white">My Research</h4>
+									<p class="text-white">This section contains my bare research paper for this project.</p>
+									<a href="research.html" class="primary-btn"><span>Read More</span></a>
 								</div>
 							</div>
 						</div>
