Index Update, Added Images

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 					<div class="row">
 						<div class="col-md-4">
 							<div class="single-feature">
-								<div class="thumb" style="background: url(img/t1.jpg);"></div>
+								<div class="thumb" style="background: url(img/research.jpg);"></div>
 								<div class="desc text-center mt-30">
 									<h4 class="text-white">Preliminary Research</h4>
-									<p class="text-white">Few would argue that, despite the advancements of feminism over the past three decades, women still face a double</p>
+									<p class="text-white"></p>
 									<a href="action.html" class="primary-btn"><span>Read More</span></a>
 								</div>
 							</div>
@@ -121,9 +121,9 @@
 						</div>
 						<div class="col-md-4">
 							<div class="single-feature">
-								<div class="thumb" style="background: url(img/t3.jpg);"></div>
+								<div class="thumb" style="background: url(img/paper.jpg);"></div>
 								<div class="desc text-center mt-30">
-									<h4 class="text-white">My Research</h4>
+									<h4 class="text-white">My Research Paper</h4>
 									<p class="text-white">This section contains my bare research paper for this project.</p>
 									<a href="research.html" class="primary-btn"><span>Read More</span></a>
 								</div>
@@ -133,110 +133,6 @@
 				</div>
 			</section>
 			<!-- End Feature Area -->
-			<!-- Start Remarkable Wroks Area -->
-			<section class="remarkable-area">
-				<div class="container">
-					<div class="row justify-content-center">
-						<div class="col-lg-6">
-							<div class="section-title text-center">
-								<h2>Remarkable Works</h2>
-								<p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more </p>
-							</div>
-						</div>
-					</div>
-					<div class="single-remark">
-						<div class="row no-gutters">
-							<div class="col-lg-7 col-md-6">
-								<div class="remark-thumb" style="background: url(img/r1.jpg);"></div>
-							</div>
-							<div class="col-lg-5 col-md-6">
-								<div class="remark-desc">
-									<h4>Vector Illustration</h4>
-									<p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more portable technology.</p>
-									<a href="#" class="primary-btn"><span>View Project</span></a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="single-remark">
-						<div class="row no-gutters">
-							<div class="col-lg-7 col-md-6">
-								<div class="remark-desc">
-									<h4>Vector Illustration</h4>
-									<p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun and excitement it provides, others may experience gambling as an addictive and distractive habit. Statistics show that while 85 percent of the adult population in </p>
-									<a href="#" class="primary-btn"><span>View Project</span></a>
-								</div>
-							</div>
-							<div class="col-lg-5 col-md-6">
-								<div class="remark-thumb" style="background: url(img/r2.jpg);"></div>
-							</div>
-						</div>
-					</div>
-					<div class="single-remark">
-						<div class="row no-gutters">
-							<div class="col-lg-7 col-md-6">
-								<div class="remark-thumb" style="background: url(img/r3.jpg);"></div>
-							</div>
-							<div class="col-lg-5 col-md-6">
-								<div class="remark-desc">
-									<h4>Vector Illustration</h4>
-									<p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more portable technology.</p>
-									<a href="#" class="primary-btn"><span>View Project</span></a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- End Remarkable Wroks Area -->
-			<!-- Start Story Area -->
-			<section class="story-area">
-				<div class="container">
-					<div class="row align-items-center">
-						<div class="col-lg-1">
-						</div>
-						<div class="col-lg-7">
-							<div class="story-box">
-								<h6 class="text-uppercase">From the part of beginning</h6>
-								<p>Usage of the Internet is becoming more common due to rapid advancement of technology and the power of globalization. Societies are becoming more inter-connected. Thoughts from different</p>
-								<a href="#" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Get Started</span><span class="lnr lnr-arrow-right"></span></a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- End Story Area -->
-			<!-- Start Contact Form -->
-			<section class="contact-form-area">
-				<div class="container">
-					<div class="row justify-content-center">
-						<div class="col-lg-6">
-							<div class="section-title text-center">
-								<h2 class="text-white">Reach Out!</h2>
-								<p class="text-white">Contact me for more information!</p>
-							</div>
-						</div>
-					</div>
-					<form id="myForm" action="mail.php" method="post" class="contact-form">
-						<div class="row justify-content-center">
-							<div class="col-lg-5">
-								<input type="text" name="fname" placeholder="Enter your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'" class="common-input mt-20" required>
-							</div>
-							<div class="col-lg-5">
-								<input type="email" name="email" placeholder="Enter email address" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" class="common-input mt-20" required>
-							</div>
-							<div class="col-lg-10">
-								<textarea class="common-textarea mt-20" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required></textarea>
-							</div>
-							<div class="col-lg-10 d-flex justify-content-end">
-								<button class="primary-btn submit-btn d-inline-flex align-items-center mt-20"><span class="mr-10">Send Message</span><span class="lnr lnr-arrow-right"></span></button> <br>
-								<div class="alert-msg"></div>
-							</div>
-						</div>
-					</form>
-				</div>
-			</section>
-			<!-- End Contact Form -->
 			<!-- Start Footer Widget Area -->
 			<section class="footer-widget-area">
 				<div class="container">
