Added Resources To Resources Page, Updated Index

--- a/action.html
+++ b/action.html
@@ -48,8 +48,8 @@
 					<div class="row justify-content-center generic-height align-items-center">
 						<div class="col-lg-8">
 							<div class="banner-content text-center">
-								<h1 class="text-white text-uppercase mb-10">Generic Page</h1>
-								<p class="text-white">It won’t be a bigger problem to find one video game lover in your <br> neighbor. Since the introduction of Virtual Game.</p>
+								<h1 class="text-white text-uppercase mb-10">Preliminary Research</h1>
+								<p class="text-white">This section covers the research and breakdown of my resources I used for this project.</p>
 							</div>
 						</div>
 					</div>
@@ -62,8 +62,8 @@
 					<div class="row justify-content-center">
 						<div class="col-lg-6">
 							<div class="section-title text-center">
-								<h2>Our Working Process</h2>
-								<p>It won’t be a bigger problem to find one video game lover in your neighbor. Since the introduction of Virtual Game, it has been achieving</p>
+								<h2>My Links</h2>
+								<p style="font-style:italic;">Please Note that these links were used through the Goodwin Library, and may not be available to those who are not students.</p>
 							</div>
 						</div>
 					</div>
@@ -72,8 +72,10 @@
 							<div class="work-icon-box">
 								<span class="lnr lnr-funnel"></span>
 							</div>
-							<h4 class="caption">1. Researching</h4>
-						</div>
+							<h4 class="caption" style="style:italic;">Increasing Volunteer Attendance At Your Next Event</h4>
+							<h5>This resource covered increasing the attendance of volunteers at events using digital advertisement, easier signup processes, business partnerships, and direct volunteer communication.</h3>
+								<a href="https://medium.com/galaxy-digital/increasing-volunteer-attendance-at-your-next-event-128bce13ddca">Click For Resource</a>
+							</div>
 						<div class="work-arrow">
 							<img src="img/elements/work-arrow.png" alt="">
 						</div>
@@ -81,7 +83,9 @@
 							<div class="work-icon-box">
 								<span class="lnr lnr-layers"></span>
 							</div>
-							<h4 class="caption">2. Wireframing</h4>
+							<h4 class="caption" style="style:italic;">Volunteering (Research Starter)</h4>
+							<h5>This resource covered the history of volunteering, as well as current examples and definitions of activities performed in this day.</h3>
+							<a href="http://goodwin.idm.oclc.org/login?url=https://search.ebscohost.com/login.aspx?direct=true&db=ers&AN=89677656&site=eds-live&scope=site">Click For Resource</a>
 						</div>
 						<div class="work-arrow">
 							<img src="img/elements/work-arrow.png" alt="">
@@ -90,7 +94,9 @@
 							<div class="work-icon-box">
 								<span class="lnr lnr-paw"></span>
 							</div>
-							<h4 class="caption">3. Prototyping</h4>
+							<h4 class="caption" style="style:italic;"></h4>
+							<h5></h5>
+							<a href="">Click For Resource</a>
 						</div>
 						<div class="work-arrow">
 							<img src="img/elements/work-arrow.png" alt="">
