--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 								<div class="thumb" style="background: url(img/research.jpg);"></div>
 								<div class="desc text-center mt-30">
 									<h4 class="text-white">Preliminary Research</h4>
-									<p class="text-white"></p>
+									<p class="text-white">This section covers my research steps and resources</p>
 									<a href="action.html" class="primary-btn"><span>Read More</span></a>
 								</div>
 							</div>
@@ -123,8 +123,18 @@
 							<div class="single-feature">
 								<div class="thumb" style="background: url(img/paper.jpg);"></div>
 								<div class="desc text-center mt-30">
-									<h4 class="text-white">My Research Paper</h4>
-									<p class="text-white">This section contains my bare research paper for this project.</p>
+									<h4 class="text-white">Application</h4>
+									<p class="text-white">This section contains the application steps of my research.</p>
+									<a href="application.html" class="primary-btn"><span>Read More</span></a>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="single-feature">
+								<div class="thumb" style="background: url(img/research-paper.jpg);"></div>
+								<div class="desc text-center mt-30">
+									<h4 class="text-white">Research Paper</h4>
+									<p class="text-white">This section contains my research paper</p>
 									<a href="research.html" class="primary-btn"><span>Read More</span></a>
 								</div>
 							</div>
