Finished Research Page

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 		</div>
 		<div class="main-wrapper">
 			<!-- Start Feature Area -->
+			<section id="secondsection"></section>
 			<section class="featured-area">
 				<div class="container">
 					<div class="row justify-content-center">
