Made Sure All Pages Have "Start" and "Return" buttons

--- a/action.html
+++ b/action.html
@@ -29,6 +29,9 @@
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
+
+			<a id="back2Top" title="Back to top" href="#">&#10148;</a>
+
 		<div class="main-wrapper-first relative">
 			<header>
 				<div class="container">
@@ -43,6 +46,7 @@
 					</div>
 				</div>
 			</header>
+			 
 			<div class="banner-area">
 				<div class="container">
 					<div class="row justify-content-center generic-height align-items-center">
@@ -50,6 +54,7 @@
 							<div class="banner-content text-center">
 								<h1 class="text-white text-uppercase mb-10">Preliminary Research</h1>
 								<p class="text-white">This section covers the research and breakdown of my resources I used for this project.</p>
+								<a href="#scrollstart" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Get Started</span><span class="lnr lnr-arrow-right"></span></a>
 							</div>
 						</div>
 					</div>
@@ -62,6 +67,7 @@
 					<div class="row justify-content-center">
 						<div class="col-lg-6">
 							<div class="section-title text-center">
+								<section id="scrollstart"></section>
 								<h2>My Links</h2>
 								<p style="font-style:italic;">Please Note that these links were used through the Goodwin Library, and may not be available to those who are not students.</p>
 							</div>
