--- a/research.html
+++ b/research.html
@@ -29,6 +29,9 @@
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
+
+			<a id="back2Top" title="Back to top" href="#">&#10148;</a>
+
 		<div class="main-wrapper-first relative">
 			<header>
 				<div class="container">
