Fixed spacing on index caption

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<div class="col-lg-7">
 								<div class="banner-content">
 									<h1 class="text-white text-uppercase mb-10">Welcome To<br>Aidan LeMay's Capstone</h1>
-									<p class="text-white mb-30">We all know that Volunteerism is an important aspect of our communities, but what impact does it really have?</p>
+									<p class="text-white mb-30">We all know that Volunteerism is an important aspect of our communities, </br> but what impact does it really have?</p>
 									<a href="#scrollstart" class="primary-btn d-inline-flex align-items-center"><span class="mr-10">Get Started</span><span class="lnr lnr-arrow-right"></span></a>
 								</div>
 							</div>
