Added changes to Application page

--- a/application.html
+++ b/application.html
@@ -69,7 +69,10 @@
 								</br>
 								One of our implimented methods of outreach was through Facebook. We created a public Leo's page to post our events on, allowing easier broadcast to the public.
 								<img src="img\fb.PNG" width="85%" height="85%" alt="Facebook Screenshot">
-								</p>
+							</br>
+							
+								As with most orgizations, we always use flyers. However, for our most recent event, we distributed our flyers via public town Facebook pages, as well as directly emailing them to previous participants.	
+							</p>
 							</div>
 						</div>
 						<div class="col-lg-12">
