Updated Application, Added photo

--- a/application.html
+++ b/application.html
@@ -91,7 +91,7 @@
 						</div>
 						<div class="col-md-12">
 							<div class="img-text">
-								<img src="img/a2.jpg" alt="" class="img-fluid float-left mr-20 mb-20">
+								<img src="img/corn.jpg" alt="" class="img-fluid float-left mr-20 mb-20">
 								<p></p>
 							</div>
 						</div>
